--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,21 +27,21 @@ jobs:
             git pull origin main
             
             # Rebuild and restart containers
-            docker-compose down
-            docker-compose build --no-cache
-            docker-compose up -d
+            docker compose down
+            docker compose build --no-cache
+            docker compose up -d
             
             # Run migrations
-            docker-compose exec -T backend php artisan migrate --force
+            docker compose exec -T backend php artisan migrate --force
             
             # Clear and cache config
-            docker-compose exec -T backend php artisan config:cache
-            docker-compose exec -T backend php artisan route:cache
-            docker-compose exec -T backend php artisan view:cache
+            docker compose exec -T backend php artisan config:cache
+            docker compose exec -T backend php artisan route:cache
+            docker compose exec -T backend php artisan view:cache
             
             # Set permissions
-            docker-compose exec -T backend chown -R www-data:www-data /var/www/html/storage
-            docker-compose exec -T backend chmod -R 775 /var/www/html/storage
+            docker compose exec -T backend chown -R www-data:www-data /var/www/html/storage
+            docker compose exec -T backend chmod -R 775 /var/www/html/storage
             
             echo "✅ Deployment completed successfully!"
 
@@ -53,7 +53,7 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             cd /home/ubuntu/constructify
-            docker-compose ps
+            docker compose ps
             echo "Checking application health..."
             sleep 5
             curl -f http://localhost:8000/api/health || echo "Health check failed"
