Add domain setup scripts and update config for constructefy.ai

--- a/env.docker.example
+++ b/env.docker.example
@@ -5,7 +5,7 @@
 # ===========================================
 # Application Configuration
 # ===========================================
-APP_URL=http://your-ec2-public-ip-or-domain.com
+APP_URL=https://constructefy.ai
 
 # ===========================================
 # Database Configuration
