Fix nginx backend configuration for Laravel API routes

--- a/nginx/backend.conf
+++ b/nginx/backend.conf
@@ -6,6 +6,7 @@ server {
 
     charset utf-8;
 
+    # Handle all requests through index.php
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
@@ -15,11 +16,20 @@ server {
 
     error_page 404 /index.php;
 
+    # PHP-FPM configuration
     location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass backend:9000;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
         include fastcgi_params;
         fastcgi_hide_header X-Powered-By;
+        fastcgi_buffer_size 128k;
+        fastcgi_buffers 256 16k;
+        fastcgi_busy_buffers_size 256k;
+        fastcgi_temp_file_write_size 256k;
     }
 
     location ~ /\.(?!well-known).* {
